@@ -757,6 +757,7 @@ QtCurveConfig::QtCurveConfig(QWidget *parent)
     connect(doubleGtkComboArrow, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(tabMouseOver, SIGNAL(currentIndexChanged(int)), SLOT(tabMoChanged()));
     connect(stdSidebarButtons, SIGNAL(toggled(bool)), SLOT(updateChanged()));
+    connect(toolbarTabs, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(borderMenuitems, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(popupBorder, SIGNAL(toggled(bool)), SLOT(updateChanged()));
     connect(progressAppearance, SIGNAL(currentIndexChanged(int)), SLOT(updateChanged()));
@@ -2037,6 +2038,7 @@ void QtCurveConfig::setOptions(Options &opts)
     opts.doubleGtkComboArrow=doubleGtkComboArrow->isChecked();
     opts.tabMouseOver=(ETabMo)tabMouseOver->currentIndex();
     opts.stdSidebarButtons=stdSidebarButtons->isChecked();
+    opts.toolbarTabs=toolbarTabs->isChecked();
     opts.borderMenuitems=borderMenuitems->isChecked();
     opts.popupBorder=popupBorder->isChecked();
     opts.progressAppearance=(EAppearance)progressAppearance->currentIndex();
@@ -2217,6 +2219,8 @@ void QtCurveConfig::setWidgetOptions(const Options &opts)
     invertBotTab_false->setChecked(!opts.invertBotTab);
     tabMouseOver->setCurrentIndex(opts.tabMouseOver);
     stdSidebarButtons->setChecked(opts.stdSidebarButtons);
+    toolbarTabs->setChecked(opts.toolbarTabs);
+    toolbarTabs_false->setChecked(!opts.toolbarTabs);
     borderMenuitems->setChecked(opts.borderMenuitems);
     popupBorder->setChecked(opts.popupBorder);
     progressAppearance->setCurrentIndex(opts.progressAppearance);
@@ -2409,6 +2413,7 @@ bool QtCurveConfig::settingsChanged(const Options &opts)
          doubleGtkComboArrow->isChecked()!=opts.doubleGtkComboArrow ||
          tabMouseOver->currentIndex()!=opts.tabMouseOver ||
          stdSidebarButtons->isChecked()!=opts.stdSidebarButtons ||
+         toolbarTabs->isChecked()!=opts.toolbarTabs ||
          borderMenuitems->isChecked()!=opts.borderMenuitems ||
          popupBorder->isChecked()!=opts.popupBorder ||
          defBtnIndicator->currentIndex()!=(int)opts.defBtnIndicator ||
